--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "QLutch splash page",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server/server.js"
+    "start": "node src/server/server.js",
+    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development concurrently \"nodemon --watch server ./src/server/server.js\" \"webpack serve --open --hot\""
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,10 @@
   },
   "homepage": "https://github.com/lrod8/Qlutch#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bytes": "^3.1.2",
+    "concurrently": "^8.2.2",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.8.1"
   }
 }
