Added GraphQL schema, database, and Redis

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PORT = 3000
+NODE_ENV = 'development'
+PORT = 4000
+REDISPASS = 'w9ddXaBTKl5wc8Os31IZPsIMdI9MRvhd'
+REDISHOST = 'redis-19943.c309.us-east-2-1.ec2.cloud.redislabs.com'
+REDISPORT = 19943
+MONGOURI = 'mongodb+srv://reneetoscan:codesmith@cluster0.4vmzxwp.mongodb.net/'
