--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "qlutch_splash",
   "version": "1.0.0",
   "description": "QLutch splash page",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "start": "node src/server/server.js",
-    "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development concurrently \"nodemon --watch server ./src/server/server.js\" \"webpack serve --open --hot\""
+    "start": "node src/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +17,13 @@
   },
   "homepage": "https://github.com/lrod8/Qlutch#readme",
   "dependencies": {
-    "bytes": "^3.1.2",
-    "concurrently": "^8.2.2",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.8.1"
+    "graphql": "^15.8.0",
+    "mongoose": "^8.0.0",
+    "redis": "^4.6.10"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
